src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-5.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(comment_lines, \"# comment\\n\")"
---
- token: comment
  stream: "# comment"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 9
      line: 0
      column: 9
- token: break
  stream: "\n"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 1
      column: 0
- value: ~

