src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-7.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(comment_lines, \"\\t# comment\")"
---
- token: separator
  stream: "\t"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: comment
  stream: "# comment"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 10
      line: 0
      column: 10
- value: ~

