src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__line_break-4.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(non_content_break, \"\\0\")"
---
- severity: error
  message: "Diagnostic { span: Span { start: Location { index: 0, line: 0, column: 0 }, end: Location { index: 0, line: 0, column: 0 } }, kind: Expected(Token(Break), Some('\\0')) }"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 0
      line: 0
      column: 0
  stream: ""

