src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__line_break-5.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(non_content_break, \"foo\")"
---
- severity: error
  message: "expected a line break, but found 'f'"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
  stream: f
- remainder: foo
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3

